fix banner overlay on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -597,7 +597,7 @@ span {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.4);
 }
 
@@ -1376,11 +1376,15 @@ h5 {
 
   .home-header-grid {
     justify-content: unset;
-    /* background-position: 24%; */
+    background-position: 24%;
   }
 
   .home-header-grid img {
-    padding-top: 80px;
+    padding-top: 110px;
+  }
+
+  .banner-overlay {
+    background-position: 24%;
   }
 
   .appt-thumbnail img {
